@@ -23,6 +23,7 @@ Date: 9999-99-99
       - Nuclear bomb-launching artillery (via "Atomic Artillery" and "Atomic Artillery Remote")
       - More weapon choices for spidertrons (via "Spidertron Weapon Switcher")
       - Mass destruction using orbital nuclear weapons (via "M.I.R.V.")
+      - Disable repair of regular (vanilla) walls and gates (via "No Wall Repair")
     - Power generation
       - Fluids-based boilers and early steam turbines (via "Superheating")
       - Plutonium power and weapon production chains (via "PlutoniumEnergy")
